# DataEpic

Weather_API/: ReadMe.md  main.py  pyproject.toml  read_to_googlesheet.py  scraper.py
Weather_API/tests/: test_scraper.py
data-wrangling/: README.md  pyproject.toml
data-wrangling/processor/: aggregate.py  app.py  clean.py  load_data.py  main.py  pandas_agg.json  polars_agg.json
data-wrangling/tests/: processing_test.py
