[project]
name = "data-processing-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars (>=1.24.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fastexcel (>=0.13.0,<0.14.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.11,<0.116.0)"
]

[tool.poetry]
packages = [{include = "data_processing_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
